@@ -1,0 +1,33 @@
+#!/usr/bin/python
+
+import subprocess
+import socket
+import time
+
+import inspect, os, sys
+# From http://stackoverflow.com/questions/279237/python-import-a-module-from-a-folder
+cmd_subfolder = os.path.realpath(os.path.abspath(os.path.join(os.path.split(inspect.getfile( inspect.currentframe() ))[0],"..")))
+if cmd_subfolder not in sys.path:
+    sys.path.insert(0, cmd_subfolder)
+
+import mosq_test
+
+rc = 1
+keepalive = 60
+connect_packet = mosq_test.gen_connect("test-helper", keepalive=keepalive)
+connack_packet = mosq_test.gen_connack(rc=0)
+
+publish_packet = mosq_test.gen_publish("test", qos=0, payload="mount point")
+
+sock = socket.socket(socket.AF_INET, socket.SOCK_STREAM)
+sock.connect(("localhost", 1889))
+sock.send(connect_packet)
+
+if mosq_test.expect_packet(sock, "helper connack", connack_packet):
+    sock.send(publish_packet)
+    rc = 0
+
+sock.close()
+    
+exit(rc)
+
